group calling feature in progress

--- a/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
+++ b/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
@@ -10,12 +10,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="JitsiConfrenceCallView" customModule="Fugu" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="JitsiConfrenceCallView" customModule="HippoCallClient" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qwj-Vg-S03" customClass="JitsiMeetView">
-                    <rect key="frame" x="0.0" y="45" width="412" height="816"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qwj-Vg-S03" customClass="JitsiMeetView">
+                    <rect key="frame" x="1" y="45" width="412" height="816"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
             </subviews>
