--- a/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
+++ b/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
@@ -18,19 +18,52 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oly-9D-ccg">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting you to your meeting...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWA-sT-44w">
+                            <rect key="frame" x="75.5" y="437.5" width="263.5" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="fHb-9v-AZ1">
+                            <rect key="frame" x="192" y="468.5" width="30" height="30"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="fHb-9v-AZ1" secondAttribute="height" multiplier="1:1" id="GrJ-tg-Py8"/>
+                                <constraint firstAttribute="width" constant="30" id="NTg-9Q-iek"/>
+                            </constraints>
+                            <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </activityIndicatorView>
+                    </subviews>
+                    <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <constraints>
+                        <constraint firstItem="fHb-9v-AZ1" firstAttribute="centerX" secondItem="LWA-sT-44w" secondAttribute="centerX" id="Gu1-Zw-3F9"/>
+                        <constraint firstItem="LWA-sT-44w" firstAttribute="centerY" secondItem="Oly-9D-ccg" secondAttribute="centerY" id="Jih-FI-ujX"/>
+                        <constraint firstItem="LWA-sT-44w" firstAttribute="centerX" secondItem="Oly-9D-ccg" secondAttribute="centerX" id="Qgi-BJ-xfu"/>
+                        <constraint firstItem="fHb-9v-AZ1" firstAttribute="top" secondItem="LWA-sT-44w" secondAttribute="bottom" constant="10" id="Tnc-gu-UGH"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="Oly-9D-ccg" secondAttribute="bottom" id="0Gw-9S-uFs"/>
+                <constraint firstItem="Oly-9D-ccg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0xy-Dq-u6p"/>
+                <constraint firstItem="Oly-9D-ccg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="1pd-As-Hdl"/>
                 <constraint firstItem="Qwj-Vg-S03" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="AKB-ac-VjD"/>
                 <constraint firstAttribute="bottom" secondItem="Qwj-Vg-S03" secondAttribute="bottom" id="Kh0-Jl-hSi"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Qwj-Vg-S03" secondAttribute="trailing" id="MYM-lU-UTt"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Oly-9D-ccg" secondAttribute="trailing" id="cUh-CY-Cdv"/>
                 <constraint firstItem="Qwj-Vg-S03" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="e0f-PY-MCA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="jitsiView" destination="Qwj-Vg-S03" id="FXQ-qO-5Mr"/>
+                <outlet property="label_Loading" destination="LWA-sT-44w" id="wtR-0r-3d1"/>
+                <outlet property="view_JitsiTopView" destination="Oly-9D-ccg" id="RVW-he-uG8"/>
             </connections>
-            <point key="canvasLocation" x="139" y="133"/>
+            <point key="canvasLocation" x="137.68115942028987" y="132.58928571428572"/>
         </view>
     </objects>
 </document>
