--- a/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
+++ b/HippoCallClient/ConferenceCall/NewConferenceViewAndLogic/JitsiConfrenceCallView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,8 +21,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oly-9D-ccg">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting you to your meeting...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWA-sT-44w">
-                            <rect key="frame" x="75.5" y="437.5" width="263.5" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting you to your meeting...." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWA-sT-44w">
+                            <rect key="frame" x="20" y="438" width="374" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -39,6 +39,7 @@
                     </subviews>
                     <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     <constraints>
+                        <constraint firstItem="LWA-sT-44w" firstAttribute="leading" secondItem="Oly-9D-ccg" secondAttribute="leading" constant="20" id="ClJ-FU-fdB"/>
                         <constraint firstItem="fHb-9v-AZ1" firstAttribute="centerX" secondItem="LWA-sT-44w" secondAttribute="centerX" id="Gu1-Zw-3F9"/>
                         <constraint firstItem="LWA-sT-44w" firstAttribute="centerY" secondItem="Oly-9D-ccg" secondAttribute="centerY" id="Jih-FI-ujX"/>
                         <constraint firstItem="LWA-sT-44w" firstAttribute="centerX" secondItem="Oly-9D-ccg" secondAttribute="centerX" id="Qgi-BJ-xfu"/>
